--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.7",
+    "@prisma/client": "^4.16.0",
     "@stitches/react": "^1.2.8",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
