--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "prisma": "^4.16.0"
   }
 }
