--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "postinstall": "prisma generate"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@next/font": "^13.4.7",
@@ -25,6 +29,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "prisma": "^4.16.0"
+    "@types/uuid": "^9.0.2",
+    "prisma": "^4.16.0",
+    "uuid": "^9.0.0"
   }
 }
